Fixed (random) origins of origin layers being stored in an immutable list